fix saved subtask edit icons visibility

--- a/styles/add_task.css
+++ b/styles/add_task.css
@@ -406,6 +406,10 @@ input:focus-visible{
     transition: 100ms ease-in-out;
 }
 
+.visible{
+    visibility: visible!important;
+}
+
 .subtask-item:hover .subtask-icons {
     transition: 100ms ease-in-out;
     visibility: visible;
